--- a/index copy.html
+++ b/index copy.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
       rel="stylesheet"
     />
+
     <meta charset="UTF-8" />
     <script src="./assets/bootstrap/bootstrap.bundle.js"></script>
     <script
@@ -20,6 +21,7 @@
     <script src="./assets/maugallery.js"></script>
     <script src="./assets/scripts.js"></script>
   </head>
+
   <body>
     <header class="top-header">
       <h3 class="name">Nina Carducci</h3>
@@ -40,7 +42,9 @@
         </ul>
       </nav>
     </header>
-    <section id="header">
+
+    <!-- arrow -->
+    <div id="header">
       <div
         id="carouselExampleIndicators"
         class="carousel slide"
@@ -68,7 +72,10 @@
             aria-label="Slide 3"
           ></button>
         </div>
-        <div class="carousel-inner">
+
+
+<!-- carrousel  -->
+        <article class="carousel-inner">
           <div class="carousel-item active">
             <img
               src="./assets/images/slider/ryoji-iwata.webp"
@@ -76,6 +83,7 @@
               alt="homme debout"
             />
           </div>
+
           <div class="carousel-item">
             <img
               src="./assets/images/slider/nicholas-green.webp"
@@ -89,8 +97,10 @@
               class="img-slider"
               alt="mariage"
             />
-          </div>
-        </div>
+		  </article>
+
+<!-- arrow -->
+    </article>
         <button
           class="carousel-control-prev"
           type="button"
@@ -109,10 +119,12 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
-      </div>
-    </section>
-    <section id="about">
-      <img   alt="nina" class="picture-nina" src="./assets/images/nina.webp" />
+	</article>
+
+<!-- paragaphe nina -->
+    </div>
+    <article id="about">
+      <img class="picture-nina" alt="nina" src="./assets/images/nina.webp" />
       <div id="about-me">
         <h3 class="about-me__title">A propos de moi</h3>
         <h6 class="about-me__introduction">
@@ -130,9 +142,12 @@
           puissiez y puiser de l’amour, du bonheur, de la tendresse et de
           lumière à chaque fois que vous poserez les yeux sur vos photos.
         </p>
-      </div>
-    </section>
-    <section id="gallery">
+	</article>
+
+
+<!-- gallery -->
+</article>
+    <div id="gallery">
       <h3 class="title">Portfolio</h3>
       <div class="container py-3">
         <div class="gallery" style="display: none">
@@ -189,8 +204,10 @@
             alt="mateus"
             src="./assets/images/gallery/entreprise/mateus-campos.webp"
           />
-        </div>
-      </div>
+		</article>
+
+<!-- citations -->
+	</div>
       <div class="quote">
         <figure>
           <blockquote>
@@ -203,91 +220,74 @@
           </blockquote>
           <figcaption class="quote__author">- Richard Avedon</figcaption>
         </figure>
-      </div>
-    </section>
-    <section id="services">
-      <h3 class="title">Mes services</h3>
-      <div class="container">
-        <div class="service">
-          <div class="service__description">
-            <h3>Shooting photo</h3>
-            <p>
-              Pour capturer vos moments les plus précieux et garder un souvenir
-              impérissable. Je me déplace en Île-de-France pour réaliser vos
-              photos
-            </p>
-          </div>
-          <div class="service__price">
-            <h4>350€/demi journée</h4>
-            <span>Matériel, déplacement inclus</span>
-          </div>
-        </div>
-        <div class="service">
-          <div class="service__description">
-            <h3>Retouches</h3>
-            <p>
-              Vous souhaitez retoucher vos photos pour un résultat professionnel
-              ? Bénéficier d’un rendu optimal pour vos publications
-            </p>
-          </div>
-          <div class="service__price">
-            <h4>50€/photo</h4>
-            <span>2 AR par photo</span>
-          </div>
-        </div>
-        <div class="service">
-          <div class="service__description">
-            <h3>Album photos</h3>
-            <p>
-              Partagez avec vos proches et vos clients les photos des moments
-              partagés ensemble à travers un album photo personnalisé
-            </p>
-          </div>
-          <div class="service__price">
-            <h4>400€ album A4</h4>
-            <span>30 pages recto/verso</span>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="quote">
-      <figure>
-        <blockquote>
-          <h1 class="quote__text">
-            De manière inconsciente, je crois, je guette un regard, une
-            expression, des traits ou une nostalgie capable de résumer ou plus
-            exactement de révéler une vie
-          </h1>
-        </blockquote>
-        <figcaption class="quote__author">- Richard Avedon</figcaption>
-      </figure>
-    </section>
-    <section id="contact">
-      <div class="container">
-        <div class="form-container">
-          <h3>Une question ? Une demande de devis ?</h3>
-          <p>
-            N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures
-          </p>
-          <form action="" method="post">
-            <label>Nom</label>
-            <input type="text" name="nom" id="nom" />
-            <label>Email</label>
-            <input type="email" name="email" id="email" />
-            <label>Message</label>
-            <textarea
-              name="message"
-              id="message"
-              cols="30"
-              rows="10"
-            ></textarea>
-            <input type="submit" value="Envoyer" />
-          </form>
-        </div>
-        <!-- <div class="picture right"> -->
-        <img class="img-camera" src="./assets/images/camera.webp" />
-        <!-- </div> -->
-      </div>
-    </section>
-  </body>
+	</di >
+
+<!-- services -->
+
+</div>
+<div id="services">
+	<h3 class="title">Mes services</h3>
+	<div class="container">
+		<div class="service">
+			<div class="service__description">
+				<h3>Shooting photo</h3>
+				<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace en Île-de-France pour réaliser vos photos</p>
+			</div>
+			<div class="service__price">
+				<h4>350€/demi journée</h4>
+				<span>Matériel, déplacement inclus</span>
+			</div>
+
+		</div>
+		<div class="service">
+			<div class="service__description">
+				<h3>Retouches</h3>
+				<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu optimal pour vos publications</p>
+			</div>
+			<div class="service__price">
+				<h4>50€/photo</h4>
+				<span>2 AR par photo</span>
+			</div>
+		</div>
+		<div class="service">
+			<div class="service__description">
+				<h3>Album photos</h3>
+				<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers un album photo personnalisé</p>
+			</div>
+			<div class="service__price">
+				<h4>400€ album A4</h4>
+				<span>30 pages recto/verso</span>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="quote">
+	<figure>
+		<blockquote>
+			<h1 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h1>
+		</blockquote>
+		<figcaption class="quote__author">- Richard Avedon</figcaption>
+	</figure>
+</div>
+<div id="contact">
+	<div class="container">
+		<div class="form-container">
+			<h3>Une question ? Une demande de devis ?</h3>
+			<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
+			<form action="" method="post">
+				<label>Nom</label>
+				<input type="text" name="nom" id="nom">
+				<label>Email</label>
+				<input type="email" name="email" id="email">
+				<label>Message</label>
+				<textarea name="message" id="message" cols="30" rows="10"></textarea>
+				<input type="submit" value="Envoyer"/>
+			</form>
+		</div>
+		<div class="picture right">
+			 <img class="img-camera" src="./assets/images/camera.webp" />
+		</div>
+	</div>
+</div>
+</body>
 </html>
