--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <meta>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" />
     <link rel="stylesheet" href="./assets/style.css" />
@@ -11,6 +11,8 @@
       rel="stylesheet"
     />
     <meta charset="UTF-8" />
+    <title>Portfolio Nina</title>
+    <meta name="descrptions" content= "Portfolio de nina une photographe, de concert, mariage, portrait, entreprise, fait aussi des shooting photo, des retouches et des albume photos " >
     <script src="./assets/bootstrap/bootstrap.bundle.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -71,21 +73,21 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="./assets/images/slider/ryoji-iwata.webp"
+              src= "./assets/images/slider/ryoji.webp"
               class="img-slider"
               alt="homme debout"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="./assets/images/slider/nicholas-green.webp"
+              src="./assets/images/slider/nicholas.webp"
               class="img-slider"
               alt="concerts"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="./assets/images/slider/edward-cisneros.webp"
+              src="./assets/images/slider/edward.webp"
               class="img-slider"
               alt="mariage"
             />
@@ -152,7 +154,7 @@
             data-gallery-tag="Entreprises"
             class="gallery-item"
             alt="jason"
-            src="./assets/images/gallery/entreprise/jason-goodman.webp"
+            src="./assets/images/gallery/entreprise/jason.webp"
           />
           <img
             data-gallery-tag="Mariages"
@@ -164,30 +166,31 @@
             data-gallery-tag="Portrait"
             class="gallery-item"
             alt="ade"
-            src="./assets/images/gallery/portraits/ade-tunji.webp"
+            src="./assets/images/gallery/portraits/ade.webp"
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
             alt="owen"
-            src="./assets/images/gallery/mariage/jakob-owens.webp"
+            src="./assets/images/gallery/mariage/mariage.webp"
           />
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
             alt="nino"
-            src="./assets/images/gallery/portraits/nino-van.webp"
+            src="./assets/images/gallery/portraits/nino.webp"
           />
           <img
             data-gallery-tag="Concert"
             class="gallery-item"
+            alt="homme"
             src="./assets/images/gallery/concerts/austin.webp"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
             alt="mateus"
-            src="./assets/images/gallery/entreprise/mateus-campos.webp"
+            src="./assets/images/gallery/entreprise/mateus.webp"
           />
         </div>
       </div>
@@ -264,7 +267,7 @@
     </section>
     <section id="contact">
       <div class="container">
-        <div class="form-container">
+        <footer class="form-container">
           <h3>Une question ? Une demande de devis ?</h3>
           <p>
             N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures
@@ -283,11 +286,11 @@
             ></textarea>
             <input type="submit" value="Envoyer" />
           </form>
-        </div>
+        </footer>
         <!-- <div class="picture right"> -->
-        <img class="img-camera" src="./assets/images/camera.webp" />
+        <img alt="camera" class="img-camera" src="./assets/images/camera.webp" />
         <!-- </div> -->
-      </div>
+        </footer>
     </section>
   </body>
 </html>
