--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
+
+ <!-- CODE HTML AVANT AVOIR ET MINIFIER  -->
 <!DOCTYPE html>
 <html>
-  <meta>
+  <meta itemscope>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" />
     <link rel="stylesheet" href="./assets/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- <html lang="fr"> -->
     <link
       href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
       rel="stylesheet"
     />
+    <html lang="fr">
     <meta charset="UTF-8" />
     <title>Portfolio Nina</title>
     <meta name="descrptions" content= "Portfolio de nina une photographe, de concert, mariage, portrait, entreprise, fait aussi des shooting photo, des retouches et des albume photos " >
@@ -24,7 +28,7 @@
   </head>
   <body>
     <header class="top-header">
-      <h3 class="name">Nina Carducci</h3>
+      <h1 class="name">Nina Carducci</h1>
       <nav class="nav">
         <ul>
           <li><a href="#about">À propos</a></li>
@@ -82,14 +86,14 @@
             <img
               src="./assets/images/slider/nicholas.webp"
               class="img-slider"
-              alt="concerts"
+              alt="homme qui chante "
             />
           </div>
           <div class="carousel-item">
             <img
               src="./assets/images/slider/edward.webp"
               class="img-slider"
-              alt="mariage"
+              alt="homme et femme heureux a leur mariage "
             />
           </div>
         </div>
@@ -116,12 +120,12 @@
     <section id="about">
       <img   alt="nina" class="picture-nina" src="./assets/images/nina.webp" />
       <div id="about-me">
-        <h3 class="about-me__title">A propos de moi</h3>
-        <h6 class="about-me__introduction">
+        <h2 class="about-me__title">A propos de moi</h2>
+        <h3 class="about-me__introduction">
           Devenir photographe était pour moi une évidence. Comme si j’y étais
           prédestiné. Saisir un moment, une émotion, une situation, un endroit,
           une lumière et les rendre immortels, voilà ce qui me fait vibrer.
-        </h6>
+        </h3>
         <p>
           Nous passons notre vie à chercher le bonheur, et lorsque nous y
           touchons, nous n’avons qu’une envie : le figer au travers de
@@ -135,7 +139,7 @@
       </div>
     </section>
     <section id="gallery">
-      <h3 class="title">Portfolio</h3>
+      <h4 class="title">Portfolio</h4>
       <div class="container py-3">
         <div class="gallery" style="display: none">
           <img
@@ -147,7 +151,7 @@
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
-            alt="ali"
+            alt="homme"
             src="./assets/images/gallery/entreprise/ali.webp"
           />
           <img
@@ -189,7 +193,7 @@
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
-            alt="mateus"
+            alt="femme"
             src="./assets/images/gallery/entreprise/mateus.webp"
           />
         </div>
@@ -197,12 +201,12 @@
       <div class="quote">
         <figure>
           <blockquote>
-            <h1 class="quote__text">
+            <h4 class="quote__text">
               Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou
               qu’un fait est traduit en photo, il cesse d’être un fait pour
               devenir une opinion. L’inexactitude n’existe pas en photographie.
               Toutes les photos sont exactes. Aucune d’elles n’est la vérité.
-            </h1>
+            </h4>
           </blockquote>
           <figcaption class="quote__author">- Richard Avedon</figcaption>
         </figure>
@@ -256,11 +260,11 @@
     <section class="quote">
       <figure>
         <blockquote>
-          <h1 class="quote__text">
+          <h4 class="quote__text">
             De manière inconsciente, je crois, je guette un regard, une
             expression, des traits ou une nostalgie capable de résumer ou plus
             exactement de révéler une vie
-          </h1>
+          </h4>
         </blockquote>
         <figcaption class="quote__author">- Richard Avedon</figcaption>
       </figure>
@@ -272,25 +276,28 @@
           <p>
             N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures
           </p>
-          <form action="" method="post">
-            <label>Nom</label>
-            <input type="text" name="nom" id="nom" />
-            <label>Email</label>
-            <input type="email" name="email" id="email" />
-            <label>Message</label>
+          <form action="" method="post">         
+            <!-- <input type="text" name="nom" id="nom" /> -->
+            <label>Nom <input type="text"></label>
+            <label>Email <input type="text"></label>
+            <label>Message<input type="text"></label>
+            <!-- <label>Email</label> -->
+            <!-- <input type="email" name="email" id="email" /> -->
+            <!-- <label>Message</label> -->
             <textarea
               name="message"
               id="message"
               cols="30"
               rows="10"
             ></textarea>
+            
             <input type="submit" value="Envoyer" />
           </form>
-        </footer>
+        </footer> 
         <!-- <div class="picture right"> -->
         <img alt="camera" class="img-camera" src="./assets/images/camera.webp" />
-        <!-- </div> -->
+        </div>
         </footer>
     </section>
   </body>
-</html>
+</html> 
