--- a/index.new.html
+++ b/index.new.html
@@ -1,6 +1,8 @@
+
+<!-- CODE HTML AVANT AVOIR ET MINIFIER -->
 <!-- <!DOCTYPE html>
 <html>
-  <head>
+  <meta itemscope>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" />
     <link rel="stylesheet" href="./assets/style.css" />
@@ -11,6 +13,8 @@
       rel="stylesheet"
     />
     <meta charset="UTF-8" />
+    <title>Portfolio Nina</title>
+    <meta name="descrptions" content= "Portfolio de nina une photographe, de concert, mariage, portrait, entreprise, fait aussi des shooting photo, des retouches et des albume photos " >
     <script src="./assets/bootstrap/bootstrap.bundle.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -21,9 +25,9 @@
     <script src="./assets/scripts.js"></script>
   </head>
   <body>
-    <div class="top-header">		
+    <header class="top-header">
       <h3 class="name">Nina Carducci</h3>
-      <div class="nav">
+      <nav class="nav">
         <ul>
           <li><a href="#about">À propos</a></li>
           <li><a href="#gallery">Galerie</a></li>
@@ -38,9 +42,9 @@
             /></a>
           </li>
         </ul>
-      </div>
-    </div>
-    <div id="header">
+      </nav>
+    </header>
+    <section id="header">
       <div
         id="carouselExampleIndicators"
         class="carousel slide"
@@ -71,23 +75,23 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="./assets/images/slider/ryoji-iwata.webp"
+              src= "./assets/images/slider/ryoji.webp"
               class="img-slider"
               alt="homme debout"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="./assets/images/slider/nicholas-green.webp"
+              src="./assets/images/slider/nicholas.webp"
               class="img-slider"
-              alt="concerts"
+              alt="homme qui chante "
             />
           </div>
           <div class="carousel-item">
             <img
-              src="./assets/images/slider/edward-cisneros.webp"
+              src="./assets/images/slider/edward.webp"
               class="img-slider"
-              alt="mariage"
+              alt="homme et femme heureux a leur mariage "
             />
           </div>
         </div>
@@ -110,9 +114,9 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-    </div>
-    <div id="about">
-      <img class="picture-nina" src="./assets/images/nina.webp" />
+    </section>
+    <section id="about">
+      <img   alt="nina" class="picture-nina" src="./assets/images/nina.webp" />
       <div id="about-me">
         <h3 class="about-me__title">A propos de moi</h3>
         <h6 class="about-me__introduction">
@@ -131,8 +135,8 @@
           lumière à chaque fois que vous poserez les yeux sur vos photos.
         </p>
       </div>
-    </div>
-    <div id="gallery">
+    </section>
+    <section id="gallery">
       <h3 class="title">Portfolio</h3>
       <div class="container py-3">
         <div class="gallery" style="display: none">
@@ -140,18 +144,19 @@
             data-gallery-tag="Concert"
             class="gallery-item"
             alt="concerts"
-            src="./assets/images/gallery/concerts/aaron-paul.webp" />
+            src="./assets/images/gallery/concerts/aaron-paul.webp"
+          />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
-            alt="ali"
+            alt="homme"
             src="./assets/images/gallery/entreprise/ali.webp"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
             alt="jason"
-            src="./assets/images/gallery/entreprise/jason-goodman.webp"
+            src="./assets/images/gallery/entreprise/jason.webp"
           />
           <img
             data-gallery-tag="Mariages"
@@ -163,26 +168,31 @@
             data-gallery-tag="Portrait"
             class="gallery-item"
             alt="ade"
-            src="./assets/images/gallery/portraits/ade-tunji.webp"
+            src="./assets/images/gallery/portraits/ade.webp"
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
             alt="owen"
-            src="./assets/images/gallery/mariage/jakob-owens.webp"
+            src="./assets/images/gallery/mariage/mariage.webp"
           />
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
             alt="nino"
-            src="./assets/images/gallery/portraits/nino-van.webp"
+            src="./assets/images/gallery/portraits/nino.webp"
           />
-          <img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin.webp"/>
+          <img
+            data-gallery-tag="Concert"
+            class="gallery-item"
+            alt="homme"
+            src="./assets/images/gallery/concerts/austin.webp"
+          />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
-            alt="mateus"
-            src="./assets/images/gallery/entreprise/mateus-campos.webp"
+            alt="femme"
+            src="./assets/images/gallery/entreprise/mateus.webp"
           />
         </div>
       </div>
@@ -199,8 +209,8 @@
           <figcaption class="quote__author">- Richard Avedon</figcaption>
         </figure>
       </div>
-    </div>
-    <div id="services">
+    </section>
+    <section id="services">
       <h3 class="title">Mes services</h3>
       <div class="container">
         <div class="service">
@@ -244,8 +254,8 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="quote">
+    </section>
+    <section class="quote">
       <figure>
         <blockquote>
           <h1 class="quote__text">
@@ -256,10 +266,10 @@
         </blockquote>
         <figcaption class="quote__author">- Richard Avedon</figcaption>
       </figure>
-    </div>
-    <div id="contact">
+    </section>
+    <section id="contact">
       <div class="container">
-        <div class="form-container">
+        <footer class="form-container">
           <h3>Une question ? Une demande de devis ?</h3>
           <p>
             N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures
@@ -278,9 +288,11 @@
             ></textarea>
             <input type="submit" value="Envoyer" />
           </form>
-        </div>       
-          <img class="img-camera" src="./assets/images/camera.webp" />       
-      </div>
-    </div>
+        </footer> -->
+        <!-- <div class="picture right"> -->
+        <!-- <img alt="camera" class="img-camera" src="./assets/images/camera.webp" /> -->
+        <!-- </div> -->
+        <!-- </footer>
+    </section>
   </body>
 </html> -->
