css + html contrats color

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <html lang="fr">
     <meta charset="UTF-8" />
     <title>Portfolio Nina</title>
-    <meta name="descrptions" content= "Portfolio de nina une photographe, de concert, mariage, portrait, entreprise, fait aussi des shooting photo, des retouches et des albume photos " >
+    <meta name="descrptions" content= "Portfolio de nina une photographe situé sur bordeaux, les de concerts, mariage, portrait, entreprise ,  on plus de secret pour elle les shootings photo,  retouches et des albume photos sont egalement proposer " >
     <script src="./assets/bootstrap/bootstrap.bundle.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -139,7 +139,7 @@
       </div>
     </section>
     <section id="gallery">
-      <h4 class="title">Portfolio</h4>
+      <h4 class="title-portfolio">Portfolio</h4>
       <div class="container py-3">
         <div class="gallery" style="display: none">
           <img
@@ -217,7 +217,7 @@
       <div class="container">
         <div class="service">
           <div class="service__description">
-            <h3>Shooting photo</h3>
+            <h4>Shooting photo</h4>
             <p>
               Pour capturer vos moments les plus précieux et garder un souvenir
               impérissable. Je me déplace en Île-de-France pour réaliser vos
@@ -225,33 +225,33 @@
             </p>
           </div>
           <div class="service__price">
-            <h4>350€/demi journée</h4>
+            <h3>350€/demi journée</h3>
             <span>Matériel, déplacement inclus</span>
           </div>
         </div>
         <div class="service">
           <div class="service__description">
-            <h3>Retouches</h3>
+            <h4>Retouches</h4>
             <p>
               Vous souhaitez retoucher vos photos pour un résultat professionnel
               ? Bénéficier d’un rendu optimal pour vos publications
             </p>
           </div>
           <div class="service__price">
-            <h4>50€/photo</h4>
+            <h3>50€/photo</h3>
             <span>2 AR par photo</span>
           </div>
         </div>
         <div class="service">
           <div class="service__description">
-            <h3>Album photos</h3>
+            <h4>Album photos</h4>
             <p>
               Partagez avec vos proches et vos clients les photos des moments
               partagés ensemble à travers un album photo personnalisé
             </p>
           </div>
           <div class="service__price">
-            <h4>400€ album A4</h4>
+            <h3>400€ album A4</h3>
             <span>30 pages recto/verso</span>
           </div>
         </div>
