--- a/index.html
+++ b/index.html
@@ -280,16 +280,15 @@
             <!-- <input type="text" name="nom" id="nom" /> -->
             <label>Nom <input type="text"></label>
             <label>Email <input type="text"></label>
-            <label>Message<input type="text"></label>
-            <!-- <label>Email</label> -->
-            <!-- <input type="email" name="email" id="email" /> -->
-            <!-- <label>Message</label> -->
-            <textarea
+            <label for="message"> Message <textarea 
               name="message"
               id="message"
               cols="30"
               rows="10"
-            ></textarea>
+            ></textarea></label>
+            <!-- <label>Email</label> -->
+            <!-- <input type="email" name="email" id="email" /> -->
+            <!-- <label>Message</label> --> 
             
             <input type="submit" value="Envoyer" />
           </form>
