--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     />
     <meta charset="UTF-8" />
     <title>Portfolio Nina</title>
+    <!-- ajout meta descprtions -->
     <meta
       name="descrptions"
       content="Portfolio de nina une photographe situé sur bordeaux, les de concerts, mariage, portrait, entreprise ,  on plus de secret pour elle les shootings photo,  retouches et des albume photos sont egalement proposer "
@@ -24,54 +25,41 @@
       property="og:image"
       content="https://www.google.com/url?sa=i&url=https%3A%2F%2Fcommons.wikimedia.org%2Fwiki%2FFile%3AInstagram_icon.png&psig=AOvVaw3mujh2R65XLG9SJgHAcKQf&ust=1690450253122000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCLi75IiIrIADFQAAAAAdAAAAABAE"
     />
-    <!-- Balise méta pour le titre -->
-    <meta property="og:title" content="Titre_de_la_page_pour_Instagram" />
-    <!-- Balise méta pour la description -->
+    <!-- Balise méta insagram -->
+    <meta property="og:title" content="Portfolio Nina" />
+
     <meta
       property="og:description"
-      content="Description_de_la_page_pour_Instagram"
+      content="Portfolio de nina une photographe situé sur bordeaux, les de concerts, mariage, portrait, entreprise ,  on plus de secret pour elle les shootings photo,  retouches et des albume photos sont egalement proposer "
     />
-    <!-- Balise méta pour le nom d'utilisateur Instagram -->
+
     <meta property="og:site_name" content="Nina_Carducci" />
 
-    <!-- Balise méta pour l'image miniature -->
-    <meta
-      property="og:image"
-      content="URL_de_l_image_miniature_pour_Facebook"
-    />
-    <!-- Balise méta pour le titre -->
-    <meta property="og:title" content="Titre_de_la_page_pour_Facebook" />
-    <!-- Balise méta pour la description -->
-    <meta
-      property="og:description"
-      content="Description_de_la_page_pour_Facebook"
-    />
-    <!-- Balise méta pour le nom d'utilisateur Facebook -->
-    <meta
-      property="og:site_name"
-      content="Nom_d_utilisateur_Facebook_de_Nina_Carducci"
-    />
+    <!-- ////////////////////////////////////////////////////////////// -->
 
-    <!-- Balise méta pour l'image miniature -->
-    <meta property="og:image" content="URL_de_l_image_miniature_pour_Twitter" />
-    <!-- Balise méta pour le titre -->
-    <meta property="og:title" content="Titre_de_la_page_pour_Twitter" />
-    <!-- Balise méta pour la description -->
+    <!-- Balises pour le Résumé (Summary Card) -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Portfolio ninacarducci" />
     <meta
-      property="og:description"
-      content="Description_de_la_page_pour_Twitter"
+      name="twitter:description"
+      content="Portfolio de nina une photographe situé sur bordeaux, les de concerts, mariage, portrait, entreprise ,  on plus de secret pour elle les shootings photo,  retouches et des albume photos sont egalement proposer "
     />
-    <!-- Balise méta pour le nom d'utilisateur Twitter -->
-    <meta
-      name="twitter:creator"
-      content="@Nom_d_utilisateur_Twitter_de_Nina_Carducci"
-    />
-    <!-- Balise méta pour le site Twitter -->
-    <meta
-      name="twitter:site"
-      content="@Nom_d_utilisateur_Twitter_de_Nina_Carducci"
-    />
-    <!-- Balise méta pour les cartes Twitter -->
+    <meta name="twitter:image" content="URL de l'image miniature" />
+    <meta name="twitter:site" content="@ninacarducci" />
+    <meta name="twitter:creator" content="@Nina_Carducci" />
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "ninacarducci",
+        "jobTitle": "ninacarducci",
+        "adresse": "68 avenue Alsace-Lorraine, 33200 Bordeaux.",
+        "telephone": "05 56 67 78 89.",
+        "standard telephonique":"Je réponds au téléphone du lundi au vendredi de 10h à 19h."]}
+    </script>
+    <!-- ////////////////////////////////////////////////////////// -->
+
     <meta name="twitter:card" content="summary_large_image" />
 
     <script src="./assets/bootstrap/bootstrap.bundle.js"></script>
@@ -87,10 +75,12 @@
     <header class="top-header">
       <h1 class="name">Nina Carducci</h1>
       <!-- NAv -->
+
       <nav
         class="nav"
         itemscope
-        itemtype="http://www.schema.org/SiteNavigationElement">
+        itemtype="http://www.schema.org/SiteNavigationElement"
+      >
         <ul>
           <li itemprop="name"><a href="#about" itemprop="url">À propos</a></li>
           <li itemprop="name"><a href="#gallery" itemprop="url">Galerie</a></li>
@@ -103,7 +93,8 @@
               class="social-link"
               href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
               target="_blank"
-              itemprop="sameAs">
+              itemprop="sameAs"
+            >
               <img src="assets/images/instagram.png" alt="logo instagram" />
             </a>
           </li>
@@ -188,29 +179,32 @@
       <!-- PP nina -->
       <img alt="nina" class="picture-nina" src="./assets/images/nina.webp" />
       <!-- Aboute-me -->
-    <div id="about-me" itemscope itemtype="http://schema.org/Person">
-  <h2 class="about-me__title">A propos de moi</h2>
-  <h3 class="about-me__introduction" itemprop="description">
-    Devenir photographe était pour moi une évidence. Comme si j’y étais
-    prédestiné. Saisir un moment, une émotion, une situation, un endroit,
-    une lumière et les rendre immortels, voilà ce qui me fait vibrer.
-  </h3>
-  <p itemprop="description">
-    Nous passons notre vie à chercher le bonheur, et lorsque nous y
-    touchons, nous n’avons qu’une envie : le figer au travers de
-    photographies pour le savourer avec les personnes qui sont importantes
-    à nos yeux, ou le partager au plus grand nombre. C’est ce que je vous
-    propose : saisir ces merveilleux moments au travers de mon regard, mon
-    approche, ma technique. Rendre ces moments immortels, afin que vous
-    puissiez y puiser de l’amour, du bonheur, de la tendresse et de
-    lumière à chaque fois que vous poserez les yeux sur vos photos.
-  </p>
-</div>
-
+      <div id="about-me" itemscope itemtype="http://schema.org/Person">
+        <h2 class="about-me__title">A propos de moi</h2>
+        <h3 class="about-me__introduction" itemprop="description">
+          Devenir photographe était pour moi une évidence. Comme si j’y étais
+          prédestiné. Saisir un moment, une émotion, une situation, un endroit,
+          une lumière et les rendre immortels, voilà ce qui me fait vibrer.
+        </h3>
+        <p itemprop="description">
+          Nous passons notre vie à chercher le bonheur, et lorsque nous y
+          touchons, nous n’avons qu’une envie : le figer au travers de
+          photographies pour le savourer avec les personnes qui sont importantes
+          à nos yeux, ou le partager au plus grand nombre. C’est ce que je vous
+          propose : saisir ces merveilleux moments au travers de mon regard, mon
+          approche, ma technique. Rendre ces moments immortels, afin que vous
+          puissiez y puiser de l’amour, du bonheur, de la tendresse et de
+          lumière à chaque fois que vous poserez les yeux sur vos photos.
+        </p>
+      </div>
     </section>
     <section id="gallery">
       <h4 class="title-portfolio">Portfolio</h4>
-      <div class="container py-3" itemscope itemtype="https://schema.org/ImageGallery">
+      <div
+        class="container py-3"
+        itemscope
+        itemtype="https://schema.org/ImageGallery"
+      >
         <div class="gallery" style="display: none">
           <img
             data-gallery-tag="Concert"
@@ -269,81 +263,104 @@
         </div>
       </div>
       <div class="quote" itemscope itemtype="http://schema.org/Quotation">
-  <figure>
-    <blockquote>
-      <h4 class="quote__text" itemprop="text">
-        Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou
-        qu’un fait est traduit en photo, il cesse d’être un fait pour
-        devenir une opinion. L’inexactitude n’existe pas en photographie.
-        Toutes les photos sont exactes. Aucune d’elles n’est la vérité.
-      </h4>
-    </blockquote>
-    <figcaption class="quote__author" itemprop="author">- Richard Avedon</figcaption>
-  </figure>
-</div>
+        <figure>
+          <blockquote>
+            <h4 class="quote__text" itemprop="text">
+              Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou
+              qu’un fait est traduit en photo, il cesse d’être un fait pour
+              devenir une opinion. L’inexactitude n’existe pas en photographie.
+              Toutes les photos sont exactes. Aucune d’elles n’est la vérité.
+            </h4>
+          </blockquote>
+          <figcaption class="quote__author" itemprop="author">
+            - Richard Avedon
+          </figcaption>
+        </figure>
+      </div>
     </section>
     <section id="services">
       <h3 class="title">Mes services</h3>
       <div class="container">
-  <!-- Premier service : Shooting photo -->
-  <div class="service" itemscope itemtype="http://schema.org/Product">
-    <div class="service__description">
-      <h4 itemprop="name">Shooting photo</h4>
-      <p itemprop="description">
-        Pour capturer vos moments les plus précieux et garder un souvenir
-        impérissable. Je me déplace en Île-de-France pour réaliser vos photos
-      </p>
-    </div>
-    <div class="service__price" itemprop="offers" itemscope itemtype="http://schema.org/Offer">
-      <h3 itemprop="price">350€/demi journée</h3>
-      <span itemprop="description">Matériel, déplacement inclus</span>
-    </div>
-  </div>
+        <!-- Premier service : Shooting photo -->
+        <div class="service" itemscope itemtype="http://schema.org/Product">
+          <div class="service__description">
+            <h4 itemprop="name">Shooting photo</h4>
+           
+            <p itemprop="description">
+              Pour capturer vos moments les plus précieux et garder un souvenir
+              impérissable. Je me déplace en Île-de-France pour réaliser vos
+              photos
+            </p>
+          </div>
+          <div
+            class="service__price"
+            itemprop="offers"
+            itemscope
+            itemtype="http://schema.org/Offer"
+          >
+            <h3><span itemprop="price">350</span>/demi journée</h3>
+            <span itemprop="description">Matériel, déplacement inclus</span>
+             <span itemprop="priceCurrency" content="€">€</span>
+          </div>
+        </div>
 
-  <!-- Deuxième service : Retouches -->
-  <div class="service" itemscope itemtype="http://schema.org/Product">
-    <div class="service__description">
-      <h4 itemprop="name">Retouches</h4>
-      <p itemprop="description">
-        Vous souhaitez retoucher vos photos pour un résultat professionnel ?
-        Bénéficier d’un rendu optimal pour vos publications
-      </p>
-    </div>
-    <div class="service__price" itemprop="offers" itemscope itemtype="http://schema.org/Offer">
-      <h3 itemprop="price">50€/photo</h3>
-      <span itemprop="description">2 AR par photo</span>
-    </div>
-  </div>
+        <!-- Deuxième service : Retouches -->
+        <div class="service" itemscope itemtype="http://schema.org/Product">
+          <div class="service__description">
+            <h4 itemprop="name">Retouches</h4>
+            <p itemprop="description">
+              Vous souhaitez retoucher vos photos pour un résultat professionnel
+              ? Bénéficier d’un rendu optimal pour vos publications
+            </p>
+          </div>
+          <div
+            class="service__price"
+            itemprop="offers"
+            itemscope
+            itemtype="http://schema.org/Offer"
+          >
+            <h3><span itemprop="price">50</span>/photo</h3>
+            <span itemprop="description">2 AR par photo</span>
+             <span itemprop="priceCurrency" content="€">€</span>
+          </div>
+        </div>
 
-  <!-- Troisième service : Album photos -->
-  <div class="service" itemscope itemtype="http://schema.org/Product">
-    <div class="service__description">
-      <h4 itemprop="name">Album photos</h4>
-      <p itemprop="description">
-        Partagez avec vos proches et vos clients les photos des moments
-        partagés ensemble à travers un album photo personnalisé
-      </p>
-    </div>
-    <div class="service__price" itemprop="offers" itemscope itemtype="http://schema.org/Offer">
-      <h3 itemprop="price">400€ album A4</h3>
-      <span itemprop="description">30 pages recto/verso</span>
-    </div>
-  </div>
-</div>
-
+        <!-- Troisième service : Album photos -->
+        <div class="service" itemscope itemtype="http://schema.org/Product">
+          <div class="service__description">
+            <h4 itemprop="name">Album photos</h4>
+            <p itemprop="description">
+              Partagez avec vos proches et vos clients les photos des moments
+              partagés ensemble à travers un album photo personnalisé
+            </p>
+          </div>
+          <div
+            class="service__price"
+            itemprop="offers"
+            itemscope
+            itemtype="http://schema.org/Offer"
+          >
+            <h3><span itemprop="price">400</span> album A4</h3>
+            <span itemprop="description">30 pages recto/verso</span>
+             <span itemprop="priceCurrency" content="€">€</span>
+          </div>
+        </div>
+      </div>
     </section>
     <section class="quote" itemscope itemtype="http://schema.org/Quotation">
-  <figure>
-    <blockquote>
-      <h4 class="quote__text" itemprop="text">
-        De manière inconsciente, je crois, je guette un regard, une
-        expression, des traits ou une nostalgie capable de résumer ou plus
-        exactement de révéler une vie
-      </h4>
-    </blockquote>
-    <figcaption class="quote__author" itemprop="author">- Richard Avedon</figcaption>
-  </figure>
-</section>
+      <figure>
+        <blockquote>
+          <h4 class="quote__text" itemprop="text">
+            De manière inconsciente, je crois, je guette un regard, une
+            expression, des traits ou une nostalgie capable de résumer ou plus
+            exactement de révéler une vie
+          </h4>
+        </blockquote>
+        <figcaption class="quote__author" itemprop="author">
+          - Richard Avedon
+        </figcaption>
+      </figure>
+    </section>
 
     <section id="contact">
       <div class="container">
@@ -379,6 +396,8 @@
           src="./assets/images/camera.webp"
         />
       </div>
+
+      <!-- <div class="footer-infos">68 avenue Alsace-Lorraine, 33200 Bordeaux.</div> -->
     </section>
   </body>
 </html>
