--- a/index.html
+++ b/index.html
@@ -52,11 +52,9 @@
       {
         "@context": "https://schema.org",
         "@type": "Person",
-        "name": "ninacarducci",
-        "jobTitle": "ninacarducci",
-        "adresse": "68 avenue Alsace-Lorraine, 33200 Bordeaux.",
-        "telephone": "05 56 67 78 89.",
-        "standard telephonique":"Je réponds au téléphone du lundi au vendredi de 10h à 19h."]}
+        "name": "Nina Carducci",
+        "address": "68 Avenue Alsace-Lorraine, 33200 Bordeaux",
+        "telephone": "05 56 67 78 89",}
     </script>
     <!-- ////////////////////////////////////////////////////////// -->
 
@@ -285,7 +283,7 @@
         <div class="service" itemscope itemtype="http://schema.org/Product">
           <div class="service__description">
             <h4 itemprop="name">Shooting photo</h4>
-           
+
             <p itemprop="description">
               Pour capturer vos moments les plus précieux et garder un souvenir
               impérissable. Je me déplace en Île-de-France pour réaliser vos
@@ -300,7 +298,7 @@
           >
             <h3><span itemprop="price">350</span>/demi journée</h3>
             <span itemprop="description">Matériel, déplacement inclus</span>
-             <span itemprop="priceCurrency" content="€">€</span>
+            <span itemprop="priceCurrency" content="€">€</span>
           </div>
         </div>
 
@@ -321,7 +319,7 @@
           >
             <h3><span itemprop="price">50</span>/photo</h3>
             <span itemprop="description">2 AR par photo</span>
-             <span itemprop="priceCurrency" content="€">€</span>
+            <span itemprop="priceCurrency" content="€">€</span>
           </div>
         </div>
 
@@ -342,7 +340,7 @@
           >
             <h3><span itemprop="price">400</span> album A4</h3>
             <span itemprop="description">30 pages recto/verso</span>
-             <span itemprop="priceCurrency" content="€">€</span>
+            <span itemprop="priceCurrency" content="€">€</span>
           </div>
         </div>
       </div>
